cypress testing running

--- a/webapp/cypress/support/component-index.html
+++ b/webapp/cypress/support/component-index.html
@@ -5,11 +5,7 @@
     <title>Component Index</title>
   </head>
   <body>
-    <h1>Component Index</h1>
-    <ul>
-      <li><a href="button.html">Button</a></li>
-      <li><a href="input.html">Input</a></li>
-      <li><a href="checkbox.html">Checkbox</a></li>
-    </ul>
+    <h1>testing</h1>
+    <div data-cy-root></div>
   </body>
 </html>
