--- a/webapp/cypress/support/component-index.html
+++ b/webapp/cypress/support/component-index.html
@@ -5,7 +5,6 @@
     <title>Component Index</title>
   </head>
   <body>
-    <h1>testing</h1>
-    <div data-cy-root></div>
+    <div style="border: 1px solid #000;" data-cy-root></div>
   </body>
 </html>
